--- a/Success.html
+++ b/Success.html
@@ -5,32 +5,30 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome aboard! 🚀</title>
 </head>
 <body>
-
     <section class="section1">
         <div class="leftside">
             <h1>Learn to code by watching others</h1>
             <span>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable. </span>
         </div>
-        <div class="rightside">
+        <div class="rightside anotherone">
             <div class="freetry">
                 <span><strong>Try it free 7 days</strong> then $20/mo. thereafter</span>
             </div>
-            <form id="myform" class="formstyle" action="">
-                <input type="text" name="" id="name" required placeholder="First Name">
-                <input type="text" name="" id="lastname" required placeholder="Last Name">
-                <input type="email" name="" id="email" required placeholder="Email Address">
-                <input type="password" name="" id="pass" required placeholder="Password">
-                <button type="submit">CLAIM YOUR FREE TRIAL</button>
-                <p>By clicking the button, you are agreeing to our <span style="color: #FF7979; cursor: pointer;">Terms and Services</span></p>
-            </form>
+            <div class="successbox">
+                <h1>Your account has been successfully created. 🎉</h1>
+                <span>You can now log in and start exploring all the features we offer. If you have any questions or need assistance, feel free to contact our support team.
+                        <br>Welcome aboard! 🚀 
+                    </span>
+            </div>
         </div>
     </section>
 
 
-    <script src="main.js"></script>
+    <script src="USER.JS"></script>
+
     
 </body>
 </html>
